--- a/.gitignore
+++ b/.gitignore
@@ -7,14 +7,13 @@ target
 tmp
 .history
 dist
-
 .idea/
 .idea_modules/
 *.iml
-
 .cache
-.classpath
+bin/
+dist.cache
 .project
 .settings/
 .target/
-bin/
+.classpath
