Missed the default from the mongodb URI

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -59,8 +59,8 @@ logger.application=DEBUG
 # ~~~~~
 # a MongoURI can also be used http://www.mongodb.org/display/DOCS/Connections
 # mongodb.default.uri = "mongodb://127.0.0.1:27017,mongodb.org:1337/salat-test"
-mongodb.uri="mongodb://127.0.0.1:27017/heroku_app8030104"
-# mongodb.uri="mongodb://heroku_app8030104:u37aro46ggr991mvgdmb5on5n9@ds037987.mongolab.com:37987/heroku_app8030104"
+# mongodb.uri="mongodb://127.0.0.1:27017/heroku_app8030104"
+mongodb.default.uri="mongodb://heroku_app8030104:u37aro46ggr991mvgdmb5on5n9@ds037987.mongolab.com:37987/heroku_app8030104"
 
 # WriteConcern
 # ~~~~~
