--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: java # to trigger the build on a 'jvm-otp' travis worker
 env:
-  - PLAY_VERSION=2.0.4
+  - PLAY_VERSION=2.1.0
 before_script:
-  - wget http://download.playframework.org/releases/play-${PLAY_VERSION}.zip
+  - wget http://download.typesafe.com/play/${PLAY_VERSION}/play-${PLAY_VERSION}.zip 
   - unzip -q play-${PLAY_VERSION}.zip
 script: play-${PLAY_VERSION}/play test
