--- a/conf/application.conf
+++ b/conf/application.conf
@@ -58,10 +58,12 @@ logger.application=DEBUG
 # MongoURI
 # ~~~~~
 # a MongoURI can also be used http://www.mongodb.org/display/DOCS/Connections
-# mongodb.default.uri = "mongodb://127.0.0.1:27017,mongodb.org:1337/salat-test"
 # mongodb.uri="mongodb://127.0.0.1:27017/heroku_app8030104"
-#mongodb.default.uri="mongodb://heroku_app8030104:u37aro46ggr991mvgdmb5on5n9@ds037987.mongolab.com:37987/heroku_app8030104"
-mongodb.default.uri = "mongodb://127.0.0.1:27017,mongodb.org:1337/salat-test"
+
+# For development with local mongodb
+# mongodb.default.uri = "mongodb://127.0.0.1:27017,mongodb.org:1337/salat-test"
+mongodb.default.uri="mongodb://heroku_app8030104:u37aro46ggr991mvgdmb5on5n9@ds037987.mongolab.com:37987/heroku_app8030104"
+
 
 # WriteConcern
 # ~~~~~
