configure by setting environment variables
see readme for details

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -59,10 +59,16 @@ logger.application=DEBUG
 # ~~~~~
 # a MongoURI can also be used http://www.mongodb.org/display/DOCS/Connections
 # mongodb.uri="mongodb://127.0.0.1:27017/heroku_app8030104"
-
 # For development with local mongodb
 # mongodb.default.uri = "mongodb://127.0.0.1:27017,mongodb.org:1337/salat-test"
-mongodb.default.uri="mongodb://heroku_app8030104:u37aro46ggr991mvgdmb5on5n9@ds037987.mongolab.com:37987/heroku_app8030104"
+
+mongodb.default.uri= ${LSUG_MONGODB_DEFAULT_URI}
+
+# Meetup API
+# ~~~~~
+meetup.key = ${LSUG_MEETUP_KEY}
+meetup.groupId = ${LSUG_MEETUP_GROUP_ID}
+meetup.meetupId = ${LSUG_MEETUP_ID}
 
 
 # WriteConcern
