cache index page using play builtin cache

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,6 +1,11 @@
 # This is the main configuration file for the application.
 # ~~~~~
 
+# Cache
+# ~~~~~
+cache.seconds = 10
+
+
 # Secret key
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
@@ -32,7 +37,7 @@ application.langs="en"
 # You can disable evolutions if needed
 dbplugin = disabled
 evolutionplugin = disabled
-ehcacheplugin = disabled
+ehcacheplugin = enabled
 
 # Logger
 # ~~~~~
@@ -60,9 +65,9 @@ logger.application=DEBUG
 # a MongoURI can also be used http://www.mongodb.org/display/DOCS/Connections
 # mongodb.uri="mongodb://127.0.0.1:27017/heroku_app8030104"
 # For development with local mongodb
-# mongodb.default.uri = "mongodb://127.0.0.1:27017,mongodb.org:1337/salat-test"
+mongodb.default.uri = "mongodb://127.0.0.1:27017/salat-test"
 
-mongodb.default.uri= ${LSUG_MONGODB_DEFAULT_URI}
+#mongodb.default.uri= ${LSUG_MONGODB_DEFAULT_URI}
 
 # Meetup API
 # ~~~~~
