incomplete: pass travis tests

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -65,9 +65,8 @@ logger.application=DEBUG
 # a MongoURI can also be used http://www.mongodb.org/display/DOCS/Connections
 # mongodb.uri="mongodb://127.0.0.1:27017/heroku_app8030104"
 # For development with local mongodb
-mongodb.default.uri = "mongodb://127.0.0.1:27017/salat-test"
-
-#mongodb.default.uri= ${LSUG_MONGODB_DEFAULT_URI}
+#mongodb.default.uri = "mongodb://127.0.0.1:27017/salat-test"
+mongodb.default.uri= ${LSUG_MONGODB_DEFAULT_URI}
 
 # Meetup API
 # ~~~~~
