use MockMeetingService for tests

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -66,14 +66,23 @@ logger.application=DEBUG
 # mongodb.uri="mongodb://127.0.0.1:27017/heroku_app8030104"
 # For development with local mongodb
 #mongodb.default.uri = "mongodb://127.0.0.1:27017/salat-test"
-mongodb.default.uri= ${LSUG_MONGODB_DEFAULT_URI}
+mongodb.default.uri = "mongodb://heroku_app8030104:u37aro46ggr991mvgdmb5on5n9@ds037987.mongolab.com:37987/heroku_app8030104"
+mongodb.default.uri= ${?LSUG_MONGODB_DEFAULT_URI}
 
 # Meetup API
 # ~~~~~
-meetup.key = ${LSUG_MEETUP_KEY}
-meetup.groupId = ${LSUG_MEETUP_GROUP_ID}
-meetup.meetupId = ${LSUG_MEETUP_ID}
+# the config variables with ${?...} can be set by environment variables
+meetup.key = "24a4b6977821146284c192b5d30"
+meetup.key = ${?LSUG_MEETUP_KEY}
 
+meetup.groupId = "1562942"
+meetup.groupId = ${?LSUG_MEETUP_GROUP_ID}
+
+# for http://localhost:9000
+meetup.meetupId = "6uaao0sbsmt6u6rj17v4lu5u9"
+# for http://lsug.org
+# meetup.meetupId = "8hb7m06tmkrv44thc9q2qvtcc3"
+meetup.meetupId = ${?LSUG_MEETUP_ID}
 
 # WriteConcern
 # ~~~~~
